--- a/templates/Mybatis_SQL.xml
+++ b/templates/Mybatis_SQL.xml
@@ -1,7 +1,5 @@
 <templateSet group="Mybatis/SQL">
-  <template name="CD" value="&lt;![CDATA[&#10;$SELECTION$&#10;]]&gt;" description="Surround with CDATA section" toReformat="false" toShortenFQNames="false">
-    <context />
-  </template>
+  <template name="CD" value="&lt;![CDATA[&#10;$SELECTION$&#10;]]&gt;" description="Surround with CDATA section" toReformat="false" toShortenFQNames="false" />
   <template name="select" value="&lt;select id=&quot;$method_name$&quot; resultMap=&quot;BaseResultMap&quot;&gt;&#10;    SELECT &lt;include refid=&quot;Base_Column_List&quot;/&gt;&#10;    FROM $table_name$&#10;    WHERE $condition$&#10;&lt;/select&gt;" description="" toReformat="false" toShortenFQNames="true">
     <variable name="method_name" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <variable name="table_name" expression="" defaultValue="" alwaysStopAt="true" />
