--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -113,4 +113,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="scanner" value="Scanner sc = new Scanner(System.in);" description="Scanner sc = new Scanner(System.in);" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
