--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -124,4 +124,10 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="am" value="@ApiModel(&quot;$var$&quot;)" toReformat="false" toShortenFQNames="true">
+    <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
