--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -124,7 +124,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="am" value="@ApiModel(&quot;$var$&quot;)" toReformat="false" toShortenFQNames="true">
+  <template name="am" value="@ApiModel(&quot;$var$&quot;)" description="" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JAVA_CODE" value="true" />
