--- a/templates/Mybatis_SQL.xml
+++ b/templates/Mybatis_SQL.xml
@@ -22,7 +22,7 @@
       <option name="XML" value="true" />
     </context>
   </template>
-  <template name="foreach" value="    &lt;foreach collection=&quot;list&quot; open=&quot;(&quot; close=&quot;)&quot; index=&quot;index&quot; item=&quot;item&quot; separator=&quot;,&quot;&gt;&#10;            &#10;    &lt;/foreach&gt;" toReformat="false" toShortenFQNames="true">
+  <template name="foreach" value="    &lt;foreach collection=&quot;list&quot; open=&quot;(&quot; close=&quot;)&quot; index=&quot;index&quot; item=&quot;item&quot; separator=&quot;,&quot;&gt;&#10;            &#10;    &lt;/foreach&gt;" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="SQL" value="true" />
     </context>
