--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -112,13 +112,13 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="pi" value="private Integer $name$" description="private Integer" toReformat="false" toShortenFQNames="true">
+  <template name="pi" value="private Integer $name$;" description="private Integer" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="ps" value="private String $name$" description="private String" toReformat="false" toShortenFQNames="true">
+  <template name="ps" value="private String $name$;" description="private String" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
