--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -130,4 +130,10 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="pf" value="private final $var$" description="private final" toReformat="false" toShortenFQNames="true">
+    <variable name="var" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
