--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -142,7 +142,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="nn" value="@NotNull(message = &quot;$var$ cannot be null!&quot;)" toReformat="false" toShortenFQNames="true">
+  <template name="nn" value="@NotNull(message = &quot;$var$ cannot be null!&quot;)" description="" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JAVA_CODE" value="true" />
