--- a/templates/Swagger.xml
+++ b/templates/Swagger.xml
@@ -14,9 +14,15 @@
   <template name="add" value="**&#10; *&#10; * @author : $author$&#10; * @date : $date$ $time$ &#10;$params$&#10;$return$&#10; */" description="add comment" toReformat="false" toShortenFQNames="true">
     <variable name="author" expression="user()" defaultValue="" alwaysStopAt="true" />
     <variable name="date" expression="date()" defaultValue="" alwaysStopAt="true" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="true" />
-    <variable name="params" expression="groovyScript(&quot;groovy code&quot;)" defaultValue="" alwaysStopAt="true" />
-    <variable name="return" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="time" expression="camelCase(capitalize())" defaultValue="" alwaysStopAt="true" />
+    <variable name="params" expression="variableOfType()" defaultValue="" alwaysStopAt="true" />
+    <variable name="return" expression="iterableVariable()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="xx" value="**&#10;* $context$&#10;*/" toReformat="false" toShortenFQNames="true">
+    <variable name="context" expression="groovyScript(&quot;D:\tmp\demo.groovy&quot;, currentPackage(), className(), methodName(), jsMethodName(), methodParameters(), methodReturnType(), date(&quot;yyyy-MM-dd&quot;), time(&quot;HH:mm:ss&quot;))" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
