--- a/templates/user.xml
+++ b/templates/user.xml
@@ -5,4 +5,10 @@
       <option name="JAVA_DECLARATION" value="true" />
     </context>
   </template>
+  <template name="spi" value="    @ApiModelProperty(value = &quot;$field$&quot;, dataType = &quot;string&quot;)&#10;    private Integer $field$;" toReformat="true" toShortenFQNames="true">
+    <variable name="field" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
