--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -19,74 +19,12 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="post" value="/**&#10; * @author alewu&#10; * @date $date$ $time$&#10; * @description $description$&#10; */&#10;@PostMapping($path$)&#10;public Response $method_name$($params$) {&#10;    $body$&#10;    return Response.ok();&#10;}" description="PostMapping" toReformat="false" toShortenFQNames="true">
-    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="false" />
-    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="method_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
-  <template name="get" value="/**&#10; * @author alewu&#10; * @date $date$ $time$&#10; * @description $description$&#10; */&#10;@GetMapping($path$)&#10;public Response $method_name$($param_type$ $param_name$) {&#10;    $body$ $var$&#10;    return Response.ok();&#10;}" description="" toReformat="false" toShortenFQNames="true">
-    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="false" />
-    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="method_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="param_type" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="param_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="var" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
-  <template name="patch" value="/**&#10; * @author alewu&#10; * @date $date$ $time$&#10; * @description $description$&#10; */&#10;@PatchMapping($path$)&#10;public Response $method_name$($params$) {&#10;    $body$&#10;    return Response.ok();&#10;}" description="PatchMapping" toReformat="false" toShortenFQNames="true">
-    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="false" />
-    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="method_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
-  <template name="delete" value="/**&#10; * @author alewu&#10; * @date $date$ $time$&#10; * @description $description$&#10; */&#10;@DeleteMapping($path$)&#10;public Response $method_name$($params$) {&#10;    $body$&#10;    return Response.ok();&#10;}" description="" toReformat="false" toShortenFQNames="true">
-    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="false" />
-    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="method_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
-  <template name="put" value="/**&#10; * @author alewu&#10; * @date $date$ $time$&#10; * @description $description$&#10; */&#10;@PutMapping($path$)&#10;public Response $method_name$($params$) {&#10;    $body$&#10;    return Response.ok();&#10;}" description="PutMapping" toReformat="false" toShortenFQNames="true">
-    <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
-    <variable name="time" expression="time()" defaultValue="" alwaysStopAt="false" />
-    <variable name="description" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="method_name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
   <template name="map" value="Map&lt;String, Object&gt; map = new HashMap&lt;&gt;();" description="Map&lt;String, Object&gt; map = new HashMap&lt;&gt;();" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="test" value="@Test&#10;public void test$var$(){&#10;    $body$&#10;}" description="" toReformat="false" toShortenFQNames="true">
+  <template name="test" value="@Test&#10;public void test$var$(){&#10;    $body$&#10;}" description="test method" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -136,7 +74,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="nn" value="@NotNull(message = &quot;$var$ cannot be null!&quot;)" description="" toReformat="false" toShortenFQNames="true">
+  <template name="nn" value="@NotNull(message = &quot;$var$ cannot be null!&quot;)" description="@NotNull" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JAVA_CODE" value="true" />
