--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -86,7 +86,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="jp" value="@JsonProperty(&quot;$var$&quot;)" toReformat="false" toShortenFQNames="true">
+  <template name="jp" value="@JsonProperty(&quot;$var$&quot;)" description="" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JAVA_CODE" value="true" />
