IU-2020.1.1 Update Mybatis_SQL.xml

--- a/templates/Mybatis_SQL.xml
+++ b/templates/Mybatis_SQL.xml
@@ -28,4 +28,11 @@
       <option name="SQL_ORACLE" value="true" />
     </context>
   </template>
+  <template name="ifs" value="&lt;if test=&quot;$var$ != null and $var$ != ''&quot;&gt;&#10;&#9;$SELECTION$&#9; = #{$var$}&#10;&lt;/if&gt;" toReformat="false" toShortenFQNames="true">
+    <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
+    <context>
+      <option name="SQL_MYSQL" value="true" />
+      <option name="XML_TEXT" value="true" />
+    </context>
+  </template>
 </templateSet>
