--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -92,4 +92,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="pd" value="private LocalDateTime ;" description="private LocalDateTime" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
