--- a/templates/other.xml
+++ b/templates/other.xml
@@ -7,4 +7,11 @@
     <variable name="VAR" expression="suggestFirstVariableName(&quot;Object&quot;)" defaultValue="var" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="ife" value="if (CollectionUtils.isEmpty($VAR$)) {&#10;$END$&#10;}" description="CollectionUtils.isEmpty" toReformat="false" toShortenFQNames="true">
+    <variable name="VAR" expression="suggestFirstVariableName(&quot;Object&quot;)" defaultValue="var" alwaysStopAt="true" />
+    <context>
+      <option name="GROOVY_STATEMENT" value="true" />
+      <option name="JAVA_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
