--- a/templates/AndroidComments.xml
+++ b/templates/AndroidComments.xml
@@ -3,5 +3,6 @@
     <variable name="author" expression="user()" defaultValue="" alwaysStopAt="false" />
     <variable name="date" expression="date()" defaultValue="" alwaysStopAt="false" />
     <variable name="todo" expression="" defaultValue="" alwaysStopAt="true" />
+    <context />
   </template>
 </templateSet>
