--- a/templates/AndroidLog.xml
+++ b/templates/AndroidLog.xml
@@ -3,5 +3,6 @@
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
     <variable name="content" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="exception" expression="" defaultValue="e" alwaysStopAt="false" />
+    <context />
   </template>
 </templateSet>
