--- a/templates/Mybatis_SQL.xml
+++ b/templates/Mybatis_SQL.xml
@@ -1,7 +1,5 @@
 <templateSet group="Mybatis/SQL">
-  <template name="CD" value="&lt;![CDATA[&#10;$SELECTION$&#10;]]&gt;" description="Surround with CDATA section" toReformat="false" toShortenFQNames="false">
-    <context />
-  </template>
+  <template name="CD" value="&lt;![CDATA[&#10;$SELECTION$&#10;]]&gt;" description="Surround with CDATA section" toReformat="false" toShortenFQNames="false" />
   <template name="select" value="&lt;select id=&quot;$method_name$&quot; resultMap=&quot;BaseResultMap&quot;&gt;&#10;    SELECT &lt;include refid=&quot;Base_Column_List&quot;/&gt;&#10;    FROM $table_name$&#10;    WHERE $condition$&#10;&lt;/select&gt;" description="" toReformat="false" toShortenFQNames="true">
     <variable name="method_name" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <variable name="table_name" expression="" defaultValue="" alwaysStopAt="true" />
@@ -28,7 +26,7 @@
       <option name="SQL_ORACLE" value="true" />
     </context>
   </template>
-  <template name="ifs" value="&lt;if test=&quot;$var$ != null and $var$ != ''&quot;&gt;&#10;&#9;$SELECTION$&#9; = #{$var$}&#10;&lt;/if&gt;" toReformat="false" toShortenFQNames="true">
+  <template name="ifs" value="&lt;if test=&quot;$var$ != null and $var$ != ''&quot;&gt;&#10;&#9;$SELECTION$&#9; = #{$var$}&#10;&lt;/if&gt;" description="" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="SQL_MYSQL" value="true" />
