--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -97,4 +97,10 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="jul" value="private static final Logger LOGGER = Logger.getLogger($CLASS$.class.getName());" description="java.util.Logger" toReformat="false" toShortenFQNames="true">
+    <variable name="CLASS" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
