--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -24,7 +24,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="test" value="@Test&#10;public void test$var$(){&#10;    $body$&#10;}" description="test method" toReformat="false" toShortenFQNames="true">
+  <template name="test" value="@Test&#10;void test$var$(){&#10;    $body$&#10;}" description="test method" toReformat="false" toShortenFQNames="true">
     <variable name="var" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="body" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
