--- a/templates/Swagger.xml
+++ b/templates/Swagger.xml
@@ -5,7 +5,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="amp" value="@ApiModelProperty(value = &quot;$value$&quot;, dataType = &quot;string&quot;)" description="swagger ApiModelProperty" toReformat="true" toShortenFQNames="true">
+  <template name="amp" value="@ApiModelProperty(value = &quot;$value$&quot;, dataType = &quot;string&quot;, required = true)" description="swagger ApiModelProperty" toReformat="true" toShortenFQNames="true">
     <variable name="value" expression="clipboard()" defaultValue="" alwaysStopAt="false" />
     <context>
       <option name="JAVA_DECLARATION" value="true" />
