--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -19,7 +19,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="map" value="Map&lt;String, Object&gt; map = new HashMap&lt;&gt;();" description="Map&lt;String, Object&gt; map = new HashMap&lt;&gt;();" toReformat="false" toShortenFQNames="true">
+  <template name="map" value="Map&lt;String, $valueType$&gt; map = Maps.newHashMapWithExpectedSize($size$);" description="Map&lt;String, Object&gt; map = new HashMap&lt;&gt;();" toReformat="false" toShortenFQNames="true">
+    <variable name="valueType" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="size" expression="" defaultValue="16" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
