--- a/templates/MyJavaTemplate.xml
+++ b/templates/MyJavaTemplate.xml
@@ -114,7 +114,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="psc" value="/**&#10; * $comment$&#10; */&#10; private String $name$&#10; &#10; " toReformat="false" toShortenFQNames="true">
+  <template name="psc" value="/**&#10; * $comment$&#10; */&#10; private String $name$&#10; &#10; " description="" toReformat="false" toShortenFQNames="true">
     <variable name="comment" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
